--- a/project2/main.html
+++ b/project2/main.html
@@ -14,12 +14,12 @@
 
 </head>
 <body>
-
+<div class="row">
 <script type="text/javascript" src="./js/cart.js"></script>
 <div class="row" style="text-align: center"><img class="col-md-4" src="./images/rustic_logo.png"/></div>
 <div class="container">
 	
-		<div class="row">
+	
 			<div class="col-md-7">
 				<ul  class="list-inline">	
 					<li><a class="list-inline-item" href="./store.html">Store</a></li>
@@ -49,7 +49,7 @@
 		<div class="col-md-3">
 			<div class="text-center">
 			<p> Cider</p>
-			<a href="./store.html"><img src="./images/sample_fruit.jpg" alt="Fruits" width="250px" height="250px" onclick="addToCart()">
+			<a href="./store.html"><img src="./images/sample_Fruits.jpg" alt="Fruits" width="250px" height="250px" onclick="addToCart()">
 			</div>
 		</div>
 	</div>
@@ -61,6 +61,8 @@
 </div>
 
 </footer>
+<script type="text/javascript" src="./js/cart.js"></script>
+<script type="text/javascript"> addToCart()</script>
 </body>
 
 
